mockApp/REST_envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 4000 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: rest_service
                            max_grpc_timeout: 0s
                            host_rewrite_literal: rest-apigo-main-6j7fqbeloq-ue.a.run.app
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: "^https://mymockapp-necuf5ddgq-ue.a.run.app$" 
                          - safe_regex:
                              google_re2: {}
                              regex: "^http://localhost:3000$" 
                        allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        expose_headers: grpc-status,grpc-message
                        max_age: "1728000" # Optional: Specifies how long the results of a preflight request can be cached
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
  clusters:
    - name: rest_service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      #http2_protocol_options: {}
      lb_policy: ROUND_ROBIN
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
      load_assignment:
        cluster_name: rest_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      {
                        address: rest-apigo-main-6j7fqbeloq-ue.a.run.app,
                        port_value: 443,
                      }
